5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1723_2499.log
== TEST (2019-05-09 11:17:30) 
-- CODE:
from math import *
soma = 0
i = 0
tg = 1 /factorial(k + i)

k = int(input("insira o numero:"))
while(k >= 0):
	i = i + 1
	soma = soma + tg
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    tg = 1 /factorial(k + i)
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:17:47) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
tg = 1 /factorial(k + i)


while(k >= 0):
	i = i + 1
	soma = soma + tg
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    tg = 1 /factorial(k + i)
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:22:14) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
tg = 1 /factorial(k -1)


while(k >= 0):
	soma = soma + tg

print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    tg = 1 /factorial(k + i)
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:25:21) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
tg = 1 /factorial(k -i)

while(k >= 0):
	i = i + 1
	soma = soma + tg

print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    tg = 1 /factorial(k + i)
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:25:38) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
tg = 1 /factorial(k -i)

while(k >= 0):
	i = i + 1
	soma = soma + tg

	print(soma)

-- OUTPUT:
0.0001984126984126984
0.0003968253968253968
0.0005952380952380953
0.0007936507936507937
0.000992063492063492
0.0011904761904761904
0.0013888888888888887
0.001587301587301587
0.0017857142857142854
0.001984126984126984
0.0021825396825396826
0.002380952380952381
0.0025793650793650797
0.0027777777777777783
0.002976190476190477
0.0031746031746031755
0.003373015873015874
0.0035714285714285726
0.003769841269841271
0.00396825396825397
0.004166666666666668
0.004365079365079367
0.0045634920634920655
0.004761904761904764
0.004960317460317463
0.005158730158730161
0.00535714285714286
0.005555555555555558
0.005753968253968257
0.0059523809523809555
0.006150793650793654
0.006349206349206353
0.006547619047619051
0.00674603174603175
0.006944444444444448
0.007142857142857147
0.0073412698412698455
0.007539682539682544
0.007738095238095243
0.007936507936507941
0.008134920634920639
0.008333333333333337
0.008531746031746034
0.008730158730158732
0.00892857142857143
0.009126984126984128
0.009325396825396825
0.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:26:18) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
tg = 1 /factorial(k -i)

while(k >= 0):
	i = i + 1
	soma = soma + tg

	print(soma)

-- OUTPUT:
0.0001984126984126984
0.0003968253968253968
0.0005952380952380953
0.0007936507936507937
0.000992063492063492
0.0011904761904761904
0.0013888888888888887
0.001587301587301587
0.0017857142857142854
0.001984126984126984
0.0021825396825396826
0.002380952380952381
0.0025793650793650797
0.0027777777777777783
0.002976190476190477
0.0031746031746031755
0.003373015873015874
0.0035714285714285726
0.003769841269841271
0.00396825396825397
0.004166666666666668
0.004365079365079367
0.0045634920634920655
0.004761904761904764
0.004960317460317463
0.005158730158730161
0.00535714285714286
0.005555555555555558
0.005753968253968257
0.0059523809523809555
0.006150793650793654
0.006349206349206353
0.006547619047619051
0.00674603174603175
0.006944444444444448
0.007142857142857147
0.0073412698412698455
0.007539682539682544
0.007738095238095243
0.007936507936507941
0.008134920634920639
0.008333333333333337
0.008531746031746034
0.008730158730158732
0.00892857142857143
0.009126984126984128
0.009325396825396825
0.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:26:18) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
tg = 1 /factorial(k -i)

while(k >= 0):
	i = i + 1
	soma = soma + tg

	print(soma)

-- OUTPUT:
0.0001984126984126984
0.0003968253968253968
0.0005952380952380953
0.0007936507936507937
0.000992063492063492
0.0011904761904761904
0.0013888888888888887
0.001587301587301587
0.0017857142857142854
0.001984126984126984
0.0021825396825396826
0.002380952380952381
0.0025793650793650797
0.0027777777777777783
0.002976190476190477
0.0031746031746031755
0.003373015873015874
0.0035714285714285726
0.003769841269841271
0.00396825396825397
0.004166666666666668
0.004365079365079367
0.0045634920634920655
0.004761904761904764
0.004960317460317463
0.005158730158730161
0.00535714285714286
0.005555555555555558
0.005753968253968257
0.0059523809523809555
0.006150793650793654
0.006349206349206353
0.006547619047619051
0.00674603174603175
0.006944444444444448
0.007142857142857147
0.0073412698412698455
0.007539682539682544
0.007738095238095243
0.007936507936507941
0.008134920634920639
0.008333333333333337
0.008531746031746034
0.008730158730158732
0.00892857142857143
0.009126984126984128
0.009325396825396825
0.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:26:18) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
tg = 1 /factorial(k -i)

while(k >= 0):
	i = i + 1
	soma = soma + tg

	print(soma)

-- OUTPUT:
0.0001984126984126984
0.0003968253968253968
0.0005952380952380953
0.0007936507936507937
0.000992063492063492
0.0011904761904761904
0.0013888888888888887
0.001587301587301587
0.0017857142857142854
0.001984126984126984
0.0021825396825396826
0.002380952380952381
0.0025793650793650797
0.0027777777777777783
0.002976190476190477
0.0031746031746031755
0.003373015873015874
0.0035714285714285726
0.003769841269841271
0.00396825396825397
0.004166666666666668
0.004365079365079367
0.0045634920634920655
0.004761904761904764
0.004960317460317463
0.005158730158730161
0.00535714285714286
0.005555555555555558
0.005753968253968257
0.0059523809523809555
0.006150793650793654
0.006349206349206353
0.006547619047619051
0.00674603174603175
0.006944444444444448
0.007142857142857147
0.0073412698412698455
0.007539682539682544
0.007738095238095243
0.007936507936507941
0.008134920634920639
0.008333333333333337
0.008531746031746034
0.008730158730158732
0.00892857142857143
0.009126984126984128
0.009325396825396825
0.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:26:18) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
tg = 1 /factorial(k -i)

while(k >= 0):
	i = i + 1
	soma = soma + tg

	print(soma)

-- OUTPUT:
0.0001984126984126984
0.0003968253968253968
0.0005952380952380953
0.0007936507936507937
0.000992063492063492
0.0011904761904761904
0.0013888888888888887
0.001587301587301587
0.0017857142857142854
0.001984126984126984
0.0021825396825396826
0.002380952380952381
0.0025793650793650797
0.0027777777777777783
0.002976190476190477
0.0031746031746031755
0.003373015873015874
0.0035714285714285726
0.003769841269841271
0.00396825396825397
0.004166666666666668
0.004365079365079367
0.0045634920634920655
0.004761904761904764
0.004960317460317463
0.005158730158730161
0.00535714285714286
0.005555555555555558
0.005753968253968257
0.0059523809523809555
0.006150793650793654
0.006349206349206353
0.006547619047619051
0.00674603174603175
0.006944444444444448
0.007142857142857147
0.0073412698412698455
0.007539682539682544
0.007738095238095243
0.007936507936507941
0.008134920634920639
0.008333333333333337
0.008531746031746034
0.008730158730158732
0.00892857142857143
0.009126984126984128
0.009325396825396825
0.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:26:18) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
tg = 1 /factorial(k -i)

while(k >= 0):
	i = i + 1
	soma = soma + tg

	print(soma)

-- OUTPUT:
0.0001984126984126984
0.0003968253968253968
0.0005952380952380953
0.0007936507936507937
0.000992063492063492
0.0011904761904761904
0.0013888888888888887
0.001587301587301587
0.0017857142857142854
0.001984126984126984
0.0021825396825396826
0.002380952380952381
0.0025793650793650797
0.0027777777777777783
0.002976190476190477
0.0031746031746031755
0.003373015873015874
0.0035714285714285726
0.003769841269841271
0.00396825396825397
0.004166666666666668
0.004365079365079367
0.0045634920634920655
0.004761904761904764
0.004960317460317463
0.005158730158730161
0.00535714285714286
0.005555555555555558
0.005753968253968257
0.0059523809523809555
0.006150793650793654
0.006349206349206353
0.006547619047619051
0.00674603174603175
0.006944444444444448
0.007142857142857147
0.0073412698412698455
0.007539682539682544
0.007738095238095243
0.007936507936507941
0.008134920634920639
0.008333333333333337
0.008531746031746034
0.008730158730158732
0.00892857142857143
0.009126984126984128
0.009325396825396825
0.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:26:19) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
tg = 1 /factorial(k -i)

while(k >= 0):
	i = i + 1
	soma = soma + tg

	print(soma)

-- OUTPUT:
0.0001984126984126984
0.0003968253968253968
0.0005952380952380953
0.0007936507936507937
0.000992063492063492
0.0011904761904761904
0.0013888888888888887
0.001587301587301587
0.0017857142857142854
0.001984126984126984
0.0021825396825396826
0.002380952380952381
0.0025793650793650797
0.0027777777777777783
0.002976190476190477
0.0031746031746031755
0.003373015873015874
0.0035714285714285726
0.003769841269841271
0.00396825396825397
0.004166666666666668
0.004365079365079367
0.0045634920634920655
0.004761904761904764
0.004960317460317463
0.005158730158730161
0.00535714285714286
0.005555555555555558
0.005753968253968257
0.0059523809523809555
0.006150793650793654
0.006349206349206353
0.006547619047619051
0.00674603174603175
0.006944444444444448
0.007142857142857147
0.0073412698412698455
0.007539682539682544
0.007738095238095243
0.007936507936507941
0.008134920634920639
0.008333333333333337
0.008531746031746034
0.008730158730158732
0.00892857142857143
0.009126984126984128
0.009325396825396825
0.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:31:30) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
tg = 1 /factorial(k -i)

while(k >= 0):
	i = i + 1
	soma = soma + tg

print(round(soma,8))

-- OUTPUT:
0.0001984126984126984
0.0003968253968253968
0.0005952380952380953
0.0007936507936507937
0.000992063492063492
0.0011904761904761904
0.0013888888888888887
0.001587301587301587
0.0017857142857142854
0.001984126984126984
0.0021825396825396826
0.002380952380952381
0.0025793650793650797
0.0027777777777777783
0.002976190476190477
0.0031746031746031755
0.003373015873015874
0.0035714285714285726
0.003769841269841271
0.00396825396825397
0.004166666666666668
0.004365079365079367
0.0045634920634920655
0.004761904761904764
0.004960317460317463
0.005158730158730161
0.00535714285714286
0.005555555555555558
0.005753968253968257
0.0059523809523809555
0.006150793650793654
0.006349206349206353
0.006547619047619051
0.00674603174603175
0.006944444444444448
0.007142857142857147
0.0073412698412698455
0.007539682539682544
0.007738095238095243
0.007936507936507941
0.008134920634920639
0.008333333333333337
0.008531746031746034
0.008730158730158732
0.00892857142857143
0.009126984126984128
0.009325396825396825
0.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:32:48) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
tg = 1 /factorial(k -i)

while(k >= 1):
	i = i + 1
	soma = soma + tg

print(round(soma,8))

-- OUTPUT:
0.0001984126984126984
0.0003968253968253968
0.0005952380952380953
0.0007936507936507937
0.000992063492063492
0.0011904761904761904
0.0013888888888888887
0.001587301587301587
0.0017857142857142854
0.001984126984126984
0.0021825396825396826
0.002380952380952381
0.0025793650793650797
0.0027777777777777783
0.002976190476190477
0.0031746031746031755
0.003373015873015874
0.0035714285714285726
0.003769841269841271
0.00396825396825397
0.004166666666666668
0.004365079365079367
0.0045634920634920655
0.004761904761904764
0.004960317460317463
0.005158730158730161
0.00535714285714286
0.005555555555555558
0.005753968253968257
0.0059523809523809555
0.006150793650793654
0.006349206349206353
0.006547619047619051
0.00674603174603175
0.006944444444444448
0.007142857142857147
0.0073412698412698455
0.007539682539682544
0.007738095238095243
0.007936507936507941
0.008134920634920639
0.008333333333333337
0.008531746031746034
0.008730158730158732
0.00892857142857143
0.009126984126984128
0.009325396825396825
0.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:33:49) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
tg = 1 /factorial(k -i)

while(i < k):
	i = i + 1
	soma = soma + tg

print(round(soma,8))

-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:33:58) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
tg = 1 /factorial(k -i)

while(i < k):
	i = i + 1
	soma = soma + tg

print(round(soma,8))

-- EXECUTION TIME:
0.27965
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
0.00138889
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
0.0
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
0.00833333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:37:12) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
tg = 1 /factorial(k -i)

while(i <= k):
	i = i + 1
	soma = soma + tg

print(round(soma,8))

-- OUTPUT:
0.0015873
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:37:36) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
tg = 1 /factorial(k -i)

while(i < k):
	i = i + 1
	soma = soma + tg

print(round(soma,8))

-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:38:02) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
tg = 1 /factorial(k -i)

while(k >= 0):
	i = i + 1
	soma = soma + tg

print(round(soma,8))

-- EXECUTION TIME:
392.374
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:38:53) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
tg = 1 /factorial(k -i)

while(i != k):
	i = i + 1
	soma = soma + tg
if(k == i)
print(round(soma,8))

-- ERROR:
File "XXXX", line 10
    if(k == i)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:39:00) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
tg = 1 /factorial(k -i)

while(i != k):
	i = i + 1
	soma = soma + tg
if(k == i):
print(round(soma,8))

-- ERROR:
File "XXXX", line 11
    print(round(soma,8))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:39:02) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
tg = 1 /factorial(k -i)

while(i != k):
	i = i + 1
	soma = soma + tg
if(k == i):
print(round(soma,8))

-- ERROR:
File "XXXX", line 11
    print(round(soma,8))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:39:05) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
tg = 1 /factorial(k -i)

while(i != k):
	i = i + 1
	soma = soma + tg
if(k == i):
	print(round(soma,8))

-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:39:10) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
tg = 1 /factorial(k -i)

while(i != k):
	i = i + 1
	soma = soma + tg
if(k == i):
	print(round(soma,8))

-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:45:49) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
fim = k - 1
tg = 1 /factorial(i)

while(i <= fim):
	i = i + 1
	soma = soma + tg

print(round(soma,8))

-- EXECUTION TIME:
0.200871
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
7.0
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
15.0
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:46:30) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
fim = k - 1
tg = 1 /(factorial(i))

while(i <= fim):
	i = i + 1
	soma = soma + tg

print(round(soma,8))

-- EXECUTION TIME:
0.135399
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
7.0
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
15.0
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:47:00) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
fim = k - 1


while(i <= fim):
	i = i + 1
	soma = soma +1 /(factorial(i))

print(round(soma,8))

-- EXECUTION TIME:
0.236994
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.71805556
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:47:47) 
-- CODE:
from math import *
	k = int(input("insira o numero:"))
soma = 0
i = 0
fim = k - 1


while(i <= fim):
	soma = soma + 1/(factorial(i))
	i = i + 1
print(round(soma,8))

-- EXECUTION TIME:
0.150158
-- ERROR:
  File "/home/codebench/codes/1723/2499/main.py", line 2
    k = int(input())
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:48:01) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
fim = k - 1


while(i <= fim):
	soma = soma + 1/(factorial(i))
	i = i + 1
print(round(soma,8))

-- EXECUTION TIME:
0.190081
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 16:21:02) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
fim = k - 1


while(i <= k):
	soma = soma + 1/(factorial(i))
	i = i + 1
print(round(soma,8))

-- EXECUTION TIME:
0.220585
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 16:21:51) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
fim = k - 1


while(i <= k-1):
	soma = soma + 1/(factorial(i))
	i = i + 1
print(round(soma,8))

-- EXECUTION TIME:
0.19216
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 16:26:05) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
fim = k - 1


while(k > i):
	soma = soma + 1/(factorial(i))
	i = i + 1
print(round(soma,8))

-- EXECUTION TIME:
0.126911
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 16:26:09) 
-- CODE:
from math import *
k = int(input("insira o numero:"))
soma = 0
i = 0
fim = k - 1


while(k > i):
	soma = soma + 1/(factorial(i))
	i = i + 1
print(round(soma,8))

-- EXECUTION TIME:
0.148202
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
